tests/syntax-error/DuplicateTypeSignature2.vix
test : Size
test = 123
test : Size
